[gd_scene load_steps=9 format=3 uid="uid://bhjcdhclie0db"]

[ext_resource type="PackedScene" uid="uid://3s77ttww565r" path="res://Scenes/Objects/display_room/display_room.tscn" id="1_mthct"]
[ext_resource type="Script" uid="uid://jtfqwqev8r0i" path="res://Scenes/Objects/display_room/display_room.gd" id="1_vqcex"]
[ext_resource type="Material" uid="uid://ybx6aveweucp" path="res://Assets/Materials/skins/brain/brain_skin.tres" id="2_86qp0"]
[ext_resource type="Material" uid="uid://0bnrrijx370p" path="res://Assets/Materials/skins/leopard/leopard.tres" id="3_eycr5"]
[ext_resource type="Material" uid="uid://cseuhpx0oub7m" path="res://Assets/Materials/skins/monster/monster.tres" id="4_eycr5"]
[ext_resource type="Material" uid="uid://brei42kcqgope" path="res://Assets/Materials/skins/mexican/mexican.tres" id="5_eycr5"]
[ext_resource type="Material" uid="uid://cek257ku242h5" path="res://Assets/Materials/skins/box/box.tres" id="6_86qp0"]
[ext_resource type="Material" uid="uid://b8vex1k4mpgtr" path="res://Assets/Materials/skins/trival/trival.tres" id="7_wrnkh"]

[node name="DisplayRoom" type="Node3D"]
script = ExtResource("1_vqcex")
skins = Array[StandardMaterial3D]([ExtResource("2_86qp0"), ExtResource("3_eycr5"), ExtResource("4_eycr5"), ExtResource("5_eycr5"), ExtResource("6_86qp0"), ExtResource("7_wrnkh")])

[node name="display_room" parent="." instance=ExtResource("1_mthct")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.122788, 0.696364, 0, 0.984808, 0.173648, -0.707107, -0.122788, 0.696364, 15, 10, 15)
keep_aspect = 0

[node name="top-light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 0)
light_energy = 5.0
omni_range = 36.112
omni_shadow_mode = 0

[node name="bottom-light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
light_energy = 5.0
omni_range = 10.0
omni_shadow_mode = 0

[node name="front-left-light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 10)
light_energy = 5.0
omni_range = 15.0
omni_shadow_mode = 0

[node name="front-right-light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 3, 0)
light_energy = 5.0
omni_range = 15.0
omni_shadow_mode = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 100.0

[node name="prev" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 50.0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 65.0
text = "prev
"

[node name="select" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 170.0
offset_top = 30.0
offset_right = 230.0
offset_bottom = 65.0
text = "select
"

[node name="next" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 300.0
offset_top = 30.0
offset_right = 350.0
offset_bottom = 65.0
text = "next
"

[connection signal="pressed" from="CanvasLayer/Control/prev" to="." method="prev_skin"]
[connection signal="pressed" from="CanvasLayer/Control/select" to="." method="select_skin"]
[connection signal="pressed" from="CanvasLayer/Control/next" to="." method="next_skin"]
